--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,9 +2,37 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel='stylesheet' href='/styles/style.css' />
   </head>
   <body>
-    {{{body}}}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">Base</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          {{#if user}}
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/private">Private</a>
+            </li>
+            <form method="POST" action="/auth/signout">
+              <button class="btn nav-link">Sign Out</button>
+            </form>
+          {{else}}
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/signup">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/signin">Sign In</a>
+            </li>
+          {{/if}}
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      {{{body}}}
+    </div>
   </body>
 </html>
