Updated login/signup error handling

--- a/views/auth/private.hbs
+++ b/views/auth/private.hbs
@@ -1,1 +1,3 @@
-<p>Welcome, logged-in user!</p>
+<p>Welcome, logged-in user! This is a <i>private page</i> for registered users of our <i>exclusive website</i>. Look at this amazing gear I made:</p>
+
+<img src="/images/gearanim.gif" />
