--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,13 +1,19 @@
 <h1>Sign Up</h1>
 
+<div class="alert alert-danger">
+  {{#if errorMessage}}
+    ERROR: {{errorMessage}}
+  {{/if}}
+</div>
+
 <form method="POST" action="/auth/signup">
   <div class="form-group">
     <label for="signup-email">E-mail: </label>
-    <input id="signup-email" type="email" name="email" placeholder="Your e-mail">
+    <input required id="signup-email" type="email" name="email" placeholder="Your e-mail">
   </div>
   <div class="form-group">
     <label for="signup-password">Password</label>
-    <input id="signup-password" type="password" name="password" placeholder="Your password">
+    <input required id="signup-password" type="password" name="password" placeholder="Your password">
   </div>
   <button>Sign Up!</button>
 </form>
